--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
     </nav>
     <div class="container mt-5">
         <h2>Login</h2>
-        <form class="row g-3" id="loginForm" method="post" action="./php/login.php">
+        <form class="row g-3" id="loginForm">
             <div class="col-md-6 mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="username" name="username" placeholder="Your username" required>
@@ -40,14 +40,15 @@
                 <input type="password" class="form-control" id="password" name="password" placeholder="********" required>
             </div>
             <div class="col-12">
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary" id="loginBtn">Login</button>
             </div>
         </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <!-- <script src="./js/login.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
