--- a/profile.html
+++ b/profile.html
@@ -30,10 +30,10 @@
         <div class="row">
             <div class="col-md-6">
                 <h4>User Details</h4>
-                <p><strong>Name:</strong> John Doe</p>
-                <p><strong>Date of Birth:</strong> 1990-01-01</p>
-                <p><strong>Contact:</strong> 123-456-7890</p>
-                <p><strong>Age:</strong> 33</p>
+                <p><strong>Name:</strong> <span id="username"></span></p>
+                <p><strong>Date of Birth:</strong> <span id="dob"></span></p>
+                <p><strong>Contact:</strong> <span id="contact"></span></p>
+                <p><strong>Age:</strong> <span id="age"></span></p>
             </div>
             <div class="col-md-6">
                 <h4>Update Profile</h4>
@@ -51,7 +51,7 @@
                         <input type="number" class="form-control" id="updateAge" placeholder="25">
                     </div>
                     <div class="col-12">
-                        <button type="submit" class="btn btn-primary">Update Profile</button>
+                        <button type="submit" class="btn btn-primary" id="updateProfile">Update Profile</button>
                     </div>
                 </form>
             </div>
@@ -60,7 +60,14 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <script src="./js/updateProfile.js"></script>
-</body>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="./js/profile.js"></script>
 
+    <script>
+        // Fetch and display user details when the page loads
+        $(document).ready(function () {
+            fetchUserDetails();
+        });
+    </script>
+</body>
 </html>
