--- a/register.html
+++ b/register.html
@@ -30,7 +30,7 @@
     </nav>
     <div class="container mt-5">
         <h2>Register</h2>
-        <form class="row g-3" id="registerForm" method="post" action="./php/register.php">
+        <form class="row g-3" id="registerForm">
             <div class="col-md-6 mb-3">
                 <label for="name" class="form-label">Name</label>
                 <input type="text" class="form-control" id="name" name="name" placeholder="John Doe" required>
@@ -52,14 +52,15 @@
                 <input type="number" class="form-control" id="age" name="age"  placeholder="25" required>
             </div>
             <div class="col-12">
-                <button type="submit" class="btn btn-primary">Register</button>
+                <button type="submit" class="btn btn-primary" id="registerBtn">Register</button>
             </div>
         </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <!-- <script src="./js/register.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+     <script src="./js/register.js"></script> 
 </body>
 
 </html>
