--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="center">
         <h1 class="display-4">Guvi Project</h1>
         <p class="bold">By Uthayakumar</p>
-        <span class=""> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum asperiores quo ipsa culpa ab,
+        <span class=""> Lorem, ipsum dolor sit amet adipisicing elit. Voluptatum asperiores quo ipsa culpa ab,
             eaque est illum sequi optio ut fugiat cumque accusantium perferendis cupiditate suscipit et quos quisquam
             velit?</a>
     </div>
