--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     <div class="center">
         <h1 class="display-4">Guvi Project</h1>
         <p class="bold">By Uthayakumar</p>
-        <span class=""> Lorem, ipsum dolor sit amet adipisicing elit. Voluptatum asperiores quo ipsa culpa ab,
-            eaque est illum sequi optio ut fugiat cumque accusantium perferendis cupiditate suscipit et quos quisquam
-            velit?</a>
+        <span class="">Technologies including html, css, php, js, bootstrap, mysql, and jquery are used in this
+            project.where the JS
+            and PHP files are kept in separate folders, and bootstrap is utilised to make the site responsive.Here, I've
+            finished the basic
+            forms for registration, login, and the profile page, which is where we save, get, and update MySQL data.</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
