--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Guvi Uk</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -40,7 +40,7 @@
                 <input type="password" class="form-control" id="password" name="password" placeholder="********" required>
             </div>
             <div class="col-12">
-                <button type="submit" class="btn btn-primary" id="loginBtn">Login</button>
+                <button type="submit" class="btn btn-dark" id="loginBtn">Login</button>
             </div>
         </form>
     </div>
