--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Guvi Uk</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -51,7 +51,7 @@
                         <input type="number" class="form-control" id="updateAge" placeholder="25">
                     </div>
                     <div class="col-12">
-                        <button type="submit" class="btn btn-primary" id="updateProfile">Update Profile</button>
+                        <button type="submit" class="btn btn-dark" id="updateProfile">Update Profile</button>
                     </div>
                 </form>
             </div>
